fix several bugs including '- beatgrids in transitions are misaligned'

--- a/app/styles/components/_track-clip.scss
+++ b/app/styles/components/_track-clip.scss
@@ -1,4 +1,6 @@
 .TrackClip {
-  overflow: hidden;
-  position: absolute;
+}
+
+.TrackClip-wave {
+  position: relative;
 }
